# aira

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/aira/: Cargo.toml
crates/aira-bench/: Cargo.toml
crates/aira-bench/src/: bench.rs  lib.rs  tiff.rs
crates/aira-byteorder/: Cargo.toml  README.md
crates/aira-byteorder/src/: io.rs  lib.rs
crates/aira-cli/: Cargo.toml
crates/aira-cli/src/: cmd.rs  main.rs  utils.rs
crates/aira-cli/src/cmd/: tiffdump.rs
crates/aira-cli/src/utils/: json.rs
crates/aira-tiff/: Cargo.toml
crates/aira-tiff/src/: compression.rs  decoder.rs  dtype.rs  endian.rs  entry.rs  error.rs  interpretation.rs  lib.rs  metadata.rs  planar_configuration.rs  predictor.rs  ratio.rs  resolution_unit.rs  sample_format.rs  subfile_type.rs  tag.rs  version.rs
crates/aira-tiff/src/compression/: deflate.rs  packbits.rs
crates/aira-tiff/src/predictor/: float.rs  floating.rs  int.rs  integer.rs
crates/aira-tiff/src/predictor/int/: fixed.rs
crates/aira-tiff/tests/: decode_metadata.rs  decompress.rs  utils.rs
crates/aira-tiff/tests/images/: README.md
crates/aira/src/: lib.rs
