[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aira = { path = "crates/aira" }
aira-byteorder = { path = "crates/aira-byteorder" }
aira-tiff = { path = "crates/aira-tiff" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
