[package]
name = "aira-tiff"
description = "TIFF image reader"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.9.2"
byteorder = "1"
flate2 = { version = "1", optional = true, default-features = false, features = [
  "zlib-rs",
] }

[dev-dependencies]
claims = "0.8"

[features]
default = ["deflate"]
deflate = ["dep:flate2"]
